# fip3

./: .gitignore  LICENSE  README.md  fip3.py  pyproject.toml
docs/: .buildinfo  fip.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: fip.rst.txt  modules.rst.txt
docs/cookbook/: basic_interrelation_analysis.ipynb  relative_feature_tightness.ipynb
docs/source/: conf.py  index.rst
fip/: chem.py  estimators.py  profiles.py
scripts/: fragments2cooccurrence_matrix.py  smiles2brics_fragments.py  smiles2ec_fragments.py
test/: test_chem.py  test_estimators.py  test_profiles.py
